--- a/frontend/app/src/index.html
+++ b/frontend/app/src/index.html
@@ -11,3 +11,4 @@
   <app-root></app-root>
 </body>
 </html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
